[gd_scene load_steps=6 format=3 uid="uid://dow5jdyygni3s"]

[ext_resource type="PackedScene" uid="uid://byg6xjjjpdp1o" path="res://scenes/ui/game_ui.tscn" id="1_2q6dc"]
[ext_resource type="Script" uid="uid://bmvevy34gpj8u" path="res://scenes/level.gd" id="1_ppgk2"]
[ext_resource type="PackedScene" uid="uid://cndmwkj47j0ww" path="res://scenes/Player.tscn" id="2_mx8sn"]
[ext_resource type="PackedScene" uid="uid://cqbyf3duimude" path="res://scenes/animals/sheep.tscn" id="3_ppgk2"]
[ext_resource type="PackedScene" uid="uid://di53xit540gqa" path="res://scenes/pen.tscn" id="4_2r41h"]

[node name="Level" type="Node2D"]
script = ExtResource("1_ppgk2")

[node name="GameUI" parent="." instance=ExtResource("1_2q6dc")]

[node name="Player" parent="." instance=ExtResource("2_mx8sn")]
position = Vector2(480, 270)

[node name="Sheep" parent="." instance=ExtResource("3_ppgk2")]
position = Vector2(358, 231)

[node name="Sheep2" parent="." instance=ExtResource("3_ppgk2")]
position = Vector2(607, 235)

[node name="Pen" parent="." instance=ExtResource("4_2r41h")]
position = Vector2(480, 110)

[node name="Button" type="Button" parent="."]
offset_left = 616.0
offset_top = 314.0
offset_right = 692.0
offset_bottom = 322.0
text = "activate powerup menu"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
