[gd_scene load_steps=9 format=3 uid="uid://dow5jdyygni3s"]

[ext_resource type="Script" uid="uid://bmvevy34gpj8u" path="res://scenes/level.gd" id="1_earhg"]
[ext_resource type="Texture2D" uid="uid://dv4dd8ca7qfdr" path="res://assets/graphics/sprites/floor.png" id="2_u6ue0"]
[ext_resource type="PackedScene" uid="uid://byg6xjjjpdp1o" path="res://scenes/ui/game_ui.tscn" id="3_fal5o"]
[ext_resource type="PackedScene" uid="uid://c2d3oaak7o717" path="res://scenes/ui/pause_menu.tscn" id="4_b0lsh"]
[ext_resource type="PackedScene" uid="uid://dtxp55d6fo5rt" path="res://scenes/Player.tscn" id="5_3rj88"]
[ext_resource type="PackedScene" uid="uid://k3vx7abiijuu" path="res://scenes/lasso.tscn" id="6_klwti"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8c41q"]
texture = ExtResource("2_u6ue0")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
1:1/0 = 0
0:1/0 = 0

[sub_resource type="TileSet" id="TileSet_olg7q"]
tile_size = Vector2i(32, 16)
sources/1 = SubResource("TileSetAtlasSource_8c41q")

[node name="Level" type="Node2D"]
script = ExtResource("1_earhg")

[node name="Floor" type="TileMapLayer" parent="."]
z_index = -5
tile_set = SubResource("TileSet_olg7q")

[node name="GameUI" parent="." instance=ExtResource("3_fal5o")]

[node name="PauseMenu" parent="." instance=ExtResource("4_b0lsh")]
visible = false

[node name="Player" parent="." instance=ExtResource("5_3rj88")]
position = Vector2(480, 270)

[node name="Lasso" parent="." node_paths=PackedStringArray("player") instance=ExtResource("6_klwti")]
player = NodePath("../Player")

[node name="Pens" type="Node" parent="."]

[node name="Animals" type="Node" parent="."]

[node name="Sheep" type="Node" parent="Animals"]
